# marching-squares

./: CMakeCache.txt  CMakeLists.txt  Makefile  MarchingSquares  README.md  cmake_install.cmake  main.py  pygame-prototype.py
output/: main
release/: CMakeCache.txt  Makefile  MarchingSquares  cmake_install.cmake
src/: OpenSimplexNoise.hpp  main.cpp
